text-overflow in CSS3 is fixed.

--- a/src/site_static/styles/plus.css
+++ b/src/site_static/styles/plus.css
@@ -139,6 +139,7 @@ a#goers-more {
     text-align: center;
     white-space:nowrap;
     text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 /* PLUS MINUS */
